align-fix

--- a/css/style.css
+++ b/css/style.css
@@ -34188,11 +34188,11 @@ font-size: 1.4rem !important;
   position: absolute;
   bottom: 0;
 }
-.goal-roal-align{
+.goals-roal-align{
   display: block;
 }
 @media (min-width: 576px){
-  .goal-roal-align{
+  .goals-roal-align{
     display: flex;
   }
 }
